udapte gulpfile.js package.json and sass files

--- a/src/sass/_base.sass
+++ b/src/sass/_base.sass
@@ -1,17 +1,13 @@
-@import "bourbon"
-@import "vars"
+@import bourbon
+@import vars
 
 
 body
-	color: #757575
+	color: $body-text-color
 	font-size: 1.5em
 	line-height: 1.5
 	padding: 0
 	margin: 0
-	font-family: 'RobotoRegular', sans-serif
+	font-family: $main-font-family
 	font-style: normal
-	min-width: 320px
-	overflow: hidden
 
-h1
-	color: red
