--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,7 +1,9 @@
-@import "bourbon"
-@import "base"
-@import "vars"
-@import "libs"
+@import bourbon
+@import base
+@import buttons
+@import vars
+@import header
+
 
 
 
@@ -18,4 +20,4 @@
 
 
 //ALWAYS END
-@import "media"
+@import media
