--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -1,9 +1,13 @@
-@import "bourbon"
+@import bourbon
+
+
+$main-font-family: 'RobotoRegular', sans-serif
+$body-text-color: #757575
+
 
 $main-color: #0f5f5c
 $accent-color: #6EB14A
-$nav-color: #E4F1FE
-$main-btn: #6EB14A
+
 
 
 =mt($time)
